...
import AVFoundation
import UIKit
import FINNBottomSheet
import CoreData

struct RecognizeView: View {
  //  @ObservedObject var camera = CameraView()
    @Environment(\.presentationMode) var presentationMode
    
    let defect: Defect
      
    var body: some View {

...
                       // Navigate to the previous screen
                       self.presentationMode.wrappedValue.dismiss()
                   }, label: {
                        Image(systemName: "chevron.left.circle.fill")
                        .font(.largeTitle)
                        .foregroundColor(Color(.systemBlue))
                        .accessibility(identifier: "backButton")
                   })
               )
        
//            Text("test")
//                .offset(CGSize(width: camera.getPoint()?.x ?? 0, height: camera.getPoint()?.y ?? 0))
  
...
